--- a/Scripts/Initial_Analysis.Rmd
+++ b/Scripts/Initial_Analysis.Rmd
@@ -1828,7 +1828,7 @@ Sau_data <-fread(paste(my_path("D"),"SAU/sau_catch_value_country_taxon_JEPA.csv"
 
 # The path
 path_world <- my_path("G", extra_path = "Spatial/SAU/SAU_Shapefile")
-path_world <- "/Volumes/Enterprise"
+path_world <- "~/Downloads/SAU_Shapefile"
 
 # The File
 fnam_world <- "SAUEEZ_July2015.shp"
@@ -1882,13 +1882,13 @@ Eez_centroid_sf <-st_as_sf(Eez_centroid,
   # st_transform(crs = "+proj=eck4")
 
 # Transform sf to df
-Eez_centroid_eck <- as.data.frame(Eez_centroid_sf)
+# Eez_centroid_eck <- as.data.frame(Eez_centroid_sf)
 
-Eez_centroid_eck <- do.call(rbind, st_geometry(Eez_centroid_sf)) %>% 
-  as_tibble() %>% 
-  setNames(c("lon","lat")) %>% 
-  bind_cols(Eez_centroid) %>% 
-  select(eez_name,longitude = lon,latitude = lat)
+# Eez_centroid_eck <- do.call(rbind, st_geometry(Eez_centroid_sf)) %>% 
+#   as_tibble() %>% 
+#   setNames(c("lon","lat")) %>% 
+#   bind_cols(Eez_centroid) %>% 
+  # select(eez_name,longitude = lon,latitude = lat)
 
 
 # Join all data for analysis
@@ -2032,6 +2032,13 @@ plot_data <- plot_data %>%
     label = ifelse(total == max(stock_d$com_sum),"Total number of emerging stocks","Total number of EEZs")
   )
 
+
+dashed_lines <- tibble(
+  x = c(2030,2050,2080),
+  label = c("SDGs target date","Early range shift  ","Late range shift   ")
+)
+
+
 # How many between 2006 and 2020?
 plot_data %>% 
   filter(taxon_emer <= 2020,
@@ -2061,10 +2068,29 @@ count_eez_plot <- ggplot() +
             size=0.5,
             colour="black"
   )  +
-  scale_y_continuous("Cumulative number of EEZs (n)",
+  # Add dashed lines and labels
+  geom_vline(
+    data = dashed_lines,
+    aes(
+      xintercept = x
+    ),
+     linetype="dashed",
+    color = "grey"
+  ) +
+  geom_text(data = dashed_lines,
+            aes(
+              x = x-4,
+              y = 40,
+              label = label
+            ),
+            size = 4,
+            color = "white",
+            angle = 90
+  ) +
+  scale_y_continuous("Cumulative number of EEZs",
                      expand = c(0,0)
                      ) +
-  scale_x_continuous("",
+  scale_x_continuous("Year of range shift",
                      breaks = seq(2000,2100,25),
                      limits = c(2005,2100),
                      # label = c(seq(2000,2075,25),">2100"),
@@ -2091,10 +2117,29 @@ count_stock_plot <- ggplot() +
             size=0.5,
             colour="black"
   )  +
-  scale_y_continuous("Cumulative number of stocks (n)",
+  # Add dashed lines and labels
+  geom_vline(
+    data = dashed_lines,
+    aes(
+      xintercept = x
+    ),
+     linetype="dashed",
+    color = "grey"
+  ) +
+  geom_text(data = dashed_lines,
+            aes(
+              x = x-4,
+              y = 750,
+              label = label
+            ),
+            size = 4,
+            color = "white",
+            angle = 90
+  ) +
+  scale_y_continuous("Cumulative number of stocks",
                      expand = c(0,0)
                      ) +
-  scale_x_continuous("Time of emergence of transboundary index",
+  scale_x_continuous("",
                      breaks = seq(2000,2100,25),
                      limits = c(2005,2100),
                      # label = c(seq(2000,2075,25),">2100"),
@@ -2129,6 +2174,25 @@ percentage_plot <- ggplot() +
             size=0.5,
             colour="black"
   ) + 
+  # Add dashed lines and labels
+  geom_vline(
+    data = dashed_lines,
+    aes(
+      xintercept = x
+    ),
+     linetype="dashed",
+    color = "grey"
+  ) +
+  geom_text(data = dashed_lines,
+            aes(
+              x = x-4,
+              y = 18,
+              label = label
+            ),
+            size = 4,
+            color = "white",
+            angle = 90
+  ) +
   scale_y_continuous("Cumulative proportion of the total (%)",
                      expand = c(0,0)
   ) +
@@ -2143,7 +2207,7 @@ percentage_plot <- ggplot() +
     legend.position = "right",
     strip.text.x = element_blank()
   ) +
-  guides(fill=guide_legend(title= "Level", reverse=FALSE)) +
+  guides(fill=guide_legend(title= "", reverse=FALSE)) +
   scale_fill_viridis(discrete = T,
                      begin = 0.1, 
                      end = 0.7,
@@ -2161,13 +2225,19 @@ percentage_plot <- ggplot() +
 # Draw figure
   plot_all <- ggdraw() +
     # Latin America and the Car.
-    draw_plot(count_eez_plot, x = 0.01, y = 0, width = 0.28, height = 1) +
+    draw_plot(count_stock_plot, x = 0.01, y = 0, width = 0.28, height = 0.90) +
     # Europe
-    draw_plot(count_stock_plot, x = 0.28, y = 0, width = 0.28, height = 1) +
+    draw_plot(count_eez_plot, x = 0.28, y = 0, width = 0.28, height = 0.90) +
     # Percentage plot
-    draw_plot(percentage_plot, x = 0.56, y = 0 , width = 0.28, height = 1) +
+    draw_plot(percentage_plot, x = 0.56, y = 0 , width = 0.28, height = 0.90) +
     # legend
-    draw_plot(legend, x = 0.84, y = 0 , width = 0.28, height = 1)
+    draw_plot(legend, x = 0.84, y = 0 , width = 0.28, height = 1) +
+    # Labels
+    draw_plot_label(label = c("A", "B","C"), 
+                    size = 20,
+                    x = c(0.01, 0.285,0.56), 
+                    y = c(1,1,1)
+    )
   
   
   # Save plot
