--- a/Scripts/Initial_Analysis.Rmd
+++ b/Scripts/Initial_Analysis.Rmd
@@ -1459,8 +1459,12 @@ This function estimates the total change in MCP proportion of each species for e
 SummaryProp <- function(taxon_key,links="NA"){
   
   # Reads taxon data
-  proportion_data <- fread(paste(my_path("R",extra_path = "Proportion_2005/"),"proportion_",taxon_key,".csv", sep="")) %>% 
-    filter(!is.na(eez_neighbour))
+  proportion_data <- fread(paste(my_path("R",extra_path = "Proportion_2005c/"),"proportion_",taxon_key,".csv", sep="")) %>% 
+    filter(!is.na(eez_neighbour)) %>% 
+    select(
+      1:4,
+      ensemble_mean = catch_proportion_temp_mean_ensemble_mean,
+      ensemble_sd = catch_proportion_temp_mean_ensemble_sd)
   
   # Identify SSR treshold for natural spatial variability of the stock
   proportion_tresh <- proportion_data %>% 
@@ -1536,7 +1540,7 @@ EEZProp <- function(taxon_list,links="NA"){
       select(-historical) %>%
       gather("time_step","n_per",early:mid)
     
-    # Min, max and median change per eez_name and neighbour
+    # Min, max and median change per eez_name and neighbor
     eez_summary <- spp %>% 
       group_by(eez_name,eez_neighbour,time_step) %>% 
       summarise(
@@ -1612,6 +1616,10 @@ PropChange <- function(taxon_list,links="NA"){
 # --------------- #
 # General Data needed
 # --------------- #
+
+# Read transboundary species database from Palacios-Abrantes et al 2020 (FishForVisa)
+Transboundary_spp <- my_path("D", extra_path = "Species/", name="Transboundary_spp.csv", read = TRUE)
+
 
 # Get taxon list
 Taxon_list_emer <- list.files(my_path("R",extra_path = "Emergence_2005"))
@@ -1750,7 +1758,7 @@ Eez_biogeo <- EEZ_CellID %>%
 # Load Proportion results
 # --------------- #
 # Get taxon list
-Taxon_list <- list.files(my_path("R",extra_path = "Proportion_2005"))
+Taxon_list <- list.files(my_path("R",extra_path = "Proportion_2005c"))
 
 # clean names for function
 Taxon_list <- gsub(".*_","",Taxon_list) 
@@ -2032,7 +2040,7 @@ plot_data <- plot_data %>%
 
 dashed_lines <- tibble(
   x = c(2030,2050,2080),
-  label = c("SDGs target date","Early range shift  ","Late range shift   ")
+  label = c("UN 2030 Agenda","Early range shift  ","Late range shift   ")
 )
 
 
@@ -2142,8 +2150,7 @@ count_stock_plot <- ggplot() +
                      # label = c(seq(2000,2075,25),">2100"),
                      expand = c(0, 0)
   ) +
-  my_ggtheme_p() +
-  theme(legend.position = "") +
+  my_ggtheme_p(leg_pos = "") +
   guides(fill=guide_legend(title= "Level", reverse=FALSE)) +
   scale_fill_viridis(discrete = T,
                      begin = 0.7, 
@@ -2199,9 +2206,8 @@ percentage_plot <- ggplot() +
                      # label = c(seq(2000,2075,25),">2100"),
                      expand = c(0, 0)
   ) +
-  my_ggtheme_p() +
+  my_ggtheme_p(leg_pos = "right") +
   theme(
-    legend.position = "right",
     strip.text.x = element_blank()
   ) +
   guides(fill=guide_legend(title= "", reverse=FALSE)) +
@@ -2228,7 +2234,7 @@ percentage_plot <- ggplot() +
     # Percentage plot
     draw_plot(percentage_plot, x = 0.56, y = 0 , width = 0.28, height = 0.90) +
     # legend
-    draw_plot(legend, x = 0.84, y = 0 , width = 0.28, height = 1) +
+    draw_plot(legend, x = 0.77, y = 0 , width = 0.28, height = 1) +
     # Labels
     draw_plot_label(label = c("A", "B","C"), 
                     size = 20,
@@ -2580,7 +2586,7 @@ for(i in 1:2){
 
 dashed_lines <- tibble(
   x = c(2030,2050,2080),
-  label = c("SDGs target date","Early range shift  ","Late range shift   ")
+  label = c("UN 2030 Agenda","Early range shift  ","Late range shift   ")
 )
 # Needs previous chunk
 
@@ -2640,7 +2646,7 @@ Buble_data %>%
 Labels_data <- tibble(
   x = c(2030,2045,2055,2007),
   y = c(-5.8,-5.8,-5.8,Percentile_value$x+.1),
-  label = c("SDGs target", "Early shift","Late shift","Fisheries > 75th percentile")
+  label = c("UN 2030 Agenda", "Early shift","Late shift","Fisheries > 75th percentile")
 )
 
 
@@ -2697,10 +2703,10 @@ ggplot(Buble_data) +
                   hjust         = 1
   ) +
   # Divisory lines and labels
-  geom_vline(xintercept = c(2030,2050), color = "grey90", size = 0.5, linetype = "dashed") +
+  geom_vline(xintercept = c(2030,2050), color = "grey50", size = 0.5, linetype = "dashed") +
   geom_hline(data = Percentile_value,
              aes(yintercept = x),
-             color = "grey90"
+             color = "grey50"
   )  +
   geom_text(data = Labels_data,
             aes(
@@ -2710,7 +2716,7 @@ ggplot(Buble_data) +
             ),
             size = 5,
             color = "grey30"
-  ) +
+  ) + 
   scale_shape("Region") +
   scale_color_viridis(name="Region",
                       discrete = T) +
@@ -2724,6 +2730,7 @@ ggplot(Buble_data) +
                      expand = c(0,0)
   ) +
   scale_size("Number of\nshifting stocks") +
+  my_ggtheme_p(legend.position = "right") +
   ggsave("./Figures/bubble_plot.png",
          width = 12,
          height = 8,
@@ -2783,10 +2790,10 @@ Eme_Res %>%
     aes(x = reorder(label,mean_toe),
         # aes(x = DemersPelag,
         y = emerging_yr,
-        # fill = DemersPelag
+        fill = mean_toe
     ),
     alpha = 0.8,
-    fill = "grey",
+    # fill = "grey",
     coef = 0, # to have dotted error bars
     outlier.shape = NA # to have dotted error bars
   ) +
@@ -2800,14 +2807,16 @@ Eme_Res %>%
     geom ='errorbar',
     width = 0.3,
     linetype = "dashed") + 
+  geom_hline(yintercept = 2030, color = "grey", size = 0.5, linetype="dashed") +
   xlab("") +
   ylab("Year of range shift") +
-  my_ggtheme_p() +
-  theme(
-    axis.text.x = element_text(size = 10, angle = 45, face = "plain", hjust = 1), 
-    # axis.ticks.x = element_blank(),
-    legend.position = "right"
-  ) +
+  my_ggtheme_p(leg_pos = "right", leg_tl_s =11, leg_tx_s = 10, axx_tx_ang = 45, ax_tx_s = 10, hjust = 1) +
+  scale_fill_viridis("Average year of\nrange shift",
+                       limits = c(2000,2100),
+                       breaks = seq(2000,2100,25),
+                       # labels = c("","","","",""),
+                       direction = -1
+    ) +
   scale_x_reordered() +
   ggsave("./Figures/regional_hab_boxplot.png",
          width = 10,
@@ -2948,7 +2957,7 @@ TukeyHSD(Hab_aov) %>%
 # Figure made thanks to Juanito!
 # http://jsmayorga.com/post/mapping-the-global-network-of-transnational-fisheries/
 
-### Median numbef of stocks changing in each time step
+### Median number of stocks changing in each time step
 
 Prop_results %>% 
   filter(variable == "n_per") %>% 
@@ -3020,7 +3029,7 @@ c(network_data_sf$line_id, network_data_sf$coords) %<-% (
 # Create data path for line connections
 paths <- network_data_sf %>% 
   sf::st_set_geometry(NULL) %>% 
-  unnest() %>%
+  unnest(cols = c(coords)) %>%
   mutate_at(vars(X,Y), round,2) %>% 
   gather("time_step","per_chng",per_early:per_mid) %>% 
   mutate(per_plot = ifelse(per_chng > 50,50,per_chng),
@@ -3076,10 +3085,10 @@ grey_land <- World_map %>%
 # Rectangles dataset
 # coord_sf(xlim = c(-3, 35),ylim = c(30, 45)) +
 Rectangles <- tibble(
-    x1=c(-100,-3,-14), #LatAm, Med, NE
-    x2=c(-55,35,23),
-    y1=c(9,31,50), 
-    y2=c(30,44,67)
+    x1=c(-100,-14), #LatAm, Med, NE
+    x2=c(-55,23),
+    y1=c(9,50), 
+    y2=c(30,67)
   )
 
 
@@ -3166,7 +3175,7 @@ for(i in 1:2){
     )
   
   Lat_am_eez <- World_eez_sf %>% 
-    rename(sf_eez_name = eez_name) %>% 
+    select(sf_eez_name = eez_name,everything()) %>% 
     left_join(Matching_names) %>% 
     filter(
       !str_detect(sf_eez_name,"Pacific"),
@@ -3230,78 +3239,78 @@ for(i in 1:2){
   
   
   ## ------------------- ##
-  # The Med
+  # The Med (Removed by Colette)
   ## ------------------- ##
   
-  # Land polygon
-  Med_land <- World_map %>% 
-    filter(region_wb %in% c("Europe & Central Asia","Middle East & North Africa") |
-             sau_fishing_entity %in% c("Spain","France")
-    )
-  
-  # EEZ polygon
-  Med_eez <- World_eez_sf %>% 
-    rename(sf_eez_name = eez_name) %>% 
-    left_join(Matching_names) %>% 
-    filter(sau_fishing_entity %in% Med_land$sau_fishing_entity,
-           sf_eez_name != "Spain (Northwest)")
-  
-  # Med data
-  Med_data <- Map_data %>% 
-    filter(source %in% Med_eez$sf_eez_name)
-  
-  # Med paths
-  Med_paths <- paths %>% 
-    filter(source %in% Med_eez$sf_eez_name,
-           target %in% Med_eez$sf_eez_name)
-  
-  # Med plot
-  Med_map <- ggplot() +
-    geom_sf(data = Med_eez, size = 0.5, fill = "white", col = "gray30") +
-    geom_sf(data = grey_land, size = 0.1, fill = "grey50", col = "gray30") + # created for figure 2
-    geom_sf(data = subset(n_taxa_map, sovereignt != "Antarctica" & time_step == time),
-            aes(fill = avrg_spp_per),
-            size = 0.1,col = "white") +
-    geom_point(data = subset(Med_data, time_step == time & per_plot < 0 ),
-               aes(start_lon,
-                   start_lat,
-                   col = per_plot),
-               size = 1,
-               col = "gray30",
-               shape = 20,
-               stroke = 1.5) +
-    geom_path(data = subset(Med_paths, time_step == time & per_plot > 0),
-              aes(X, Y,
-                  group = interaction(line_id,subline_id),
-                  col = per_plot
-              ),
-              size = 1,
-              arrow = arrow(length = unit(0.05, "npc"),
-                            ends = "first"),
-              show.legend = NA) +
-    coord_sf(xlim = c(-3, 35),ylim = c(30, 45)) +
-    labs(x = "", y = "") +
-    scale_x_continuous(breaks = seq(-5,35,10)) +
-    scale_y_continuous(breaks = seq(30,50,5)) +
-    my_ggtheme_m() +
-    theme(legend.position = "",
-          panel.background = element_rect(fill = "white", color = "white"),
-          panel.grid.major =  element_line(color = "white")
-    ) +
-    scale_colour_viridis(
-      name="Average Gain of\nStock-Share Ratio (%)",
-      limits = c(0,max(Med_data$per_plot)),
-      breaks = seq(0,max(Med_data$per_plot),5),
-      # option="magma",
-      # direction = -1
-    )+
-    scale_fill_viridis(
-      name="Average Gain of\nStock-Share Ratio (%)",
-      limits = c(0,max(Med_data$per_plot)),
-      breaks = seq(0,max(Med_data$per_plot),5),
-      # option="magma",
-      # direction = -1
-    )#;Med_map
+  # # Land polygon
+  # Med_land <- World_map %>% 
+  #   filter(region_wb %in% c("Europe & Central Asia","Middle East & North Africa") |
+  #            sau_fishing_entity %in% c("Spain","France")
+  #   )
+  # 
+  # # EEZ polygon
+  # Med_eez <- World_eez_sf %>% 
+  #   select(sf_eez_name = eez_name,everything()) %>% 
+  #   left_join(Matching_names) %>% 
+  #   filter(sau_fishing_entity %in% Med_land$sau_fishing_entity,
+  #          sf_eez_name != "Spain (Northwest)")
+  # 
+  # # Med data
+  # Med_data <- Map_data %>% 
+  #   filter(source %in% Med_eez$sf_eez_name)
+  # 
+  # # Med paths
+  # Med_paths <- paths %>% 
+  #   filter(source %in% Med_eez$sf_eez_name,
+  #          target %in% Med_eez$sf_eez_name)
+  # 
+  # # Med plot
+  # Med_map <- ggplot() +
+  #   geom_sf(data = Med_eez, size = 0.5, fill = "white", col = "gray30") +
+  #   geom_sf(data = grey_land, size = 0.1, fill = "grey50", col = "gray30") + # created for figure 2
+  #   geom_sf(data = subset(n_taxa_map, sovereignt != "Antarctica" & time_step == time),
+  #           aes(fill = avrg_spp_per),
+  #           size = 0.1,col = "white") +
+  #   geom_point(data = subset(Med_data, time_step == time & per_plot < 0 ),
+  #              aes(start_lon,
+  #                  start_lat,
+  #                  col = per_plot),
+  #              size = 1,
+  #              col = "gray30",
+  #              shape = 20,
+  #              stroke = 1.5) +
+  #   geom_path(data = subset(Med_paths, time_step == time & per_plot > 0),
+  #             aes(X, Y,
+  #                 group = interaction(line_id,subline_id),
+  #                 col = per_plot
+  #             ),
+  #             size = 1,
+  #             arrow = arrow(length = unit(0.05, "npc"),
+  #                           ends = "first"),
+  #             show.legend = NA) +
+  #   coord_sf(xlim = c(-3, 35),ylim = c(30, 45)) +
+  #   labs(x = "", y = "") +
+  #   scale_x_continuous(breaks = seq(-5,35,10)) +
+  #   scale_y_continuous(breaks = seq(30,50,5)) +
+  #   my_ggtheme_m() +
+  #   theme(legend.position = "",
+  #         panel.background = element_rect(fill = "white", color = "white"),
+  #         panel.grid.major =  element_line(color = "white")
+  #   ) +
+  #   scale_colour_viridis(
+  #     name="Average Gain of\nStock-Share Ratio (%)",
+  #     limits = c(0,max(Med_data$per_plot)),
+  #     breaks = seq(0,max(Med_data$per_plot),5),
+  #     # option="magma",
+  #     # direction = -1
+  #   )+
+  #   scale_fill_viridis(
+  #     name="Average Gain of\nStock-Share Ratio (%)",
+  #     limits = c(0,max(Med_data$per_plot)),
+  #     breaks = seq(0,max(Med_data$per_plot),5),
+  #     # option="magma",
+  #     # direction = -1
+  #   )#;Med_map
   
   
   ## ------------------- ##
@@ -3320,7 +3329,7 @@ for(i in 1:2){
   
   
   Eu_eez <- World_eez_sf %>% 
-    rename(sf_eez_name = eez_name) %>% 
+    select(sf_eez_name = eez_name,everything()) %>% 
     left_join(Matching_names) %>% 
     filter(
       !sf_eez_name %in% c("Iceland", "Norway","Italy","Greece","Croatia","Bulgaria","Romania"),
@@ -3343,7 +3352,7 @@ for(i in 1:2){
     geom_sf(data = subset(n_taxa_map, sovereignt != "Antarctica" & time_step == time),
             aes(fill = avrg_spp_per),
             size = 0.1,col = "white") +
-    geom_point(data = subset(Med_data, time_step == time & per_plot < 0 ),
+    geom_point(data = subset(Eu_data, time_step == time & per_plot < 0 ),
                aes(start_lon,
                    start_lat,
                    col = per_plot),
@@ -3378,8 +3387,8 @@ for(i in 1:2){
     )+
     scale_fill_viridis(
       name="Average Gain of\nStock-Share Ratio (%)",
-      limits = c(0,max(Med_data$per_plot)),
-      breaks = seq(0,max(Med_data$per_plot),5),
+      limits = c(0,max(Eu_data$per_plot)),
+      breaks = seq(0,max(Eu_data$per_plot),5),
       # option="magma",
       # direction = -1
     )#;Eu_map
@@ -3403,22 +3412,20 @@ for(i in 1:2){
     # Main map
     draw_plot(Prop_map, x = 0, y = 0.40, width = 1, height = 0.6) +
     # Latin America and the Car.
-    draw_plot(Lat_am_map, x = 0.01, y = 0.02, width = 0.33, height = 0.45) +
+    draw_plot(Lat_am_map, x = 0.05, y = 0.00, width = 0.5, height = 0.50) +
     # Europe
-    draw_plot(Eu_map, x = 0.33, y = 0.01, width = 0.33, height = 0.45) +
-    # The Med
-    draw_plot(Med_map, x = 0.66, y = 0.02 , width = 0.33, height = 0.45) +
+    draw_plot(Eu_map, x = 0.52, y = 0.05, width = 0.35, height = 0.35) +
     # Legend
-    draw_plot(map_plot, x = 0.3, y = 0, width = 0.59, height = 0.1) +
+    draw_plot(legend, x = 0.25, y = 0, width = 0.59, height = 0.09) +
     # Labels
-    draw_plot_label(label = c("A", "B", "The Caribbean","Northwestern Europe","The Mediterranean"),
-                    size = c(20,20,15,15,15),
-                    x = c(0.01,0.01,0.058,0.33,0.68),
-                    y = c(1,0.45,0.44,0.44,0.44)
+    draw_plot_label(label = c("A", "B", "The Caribbean","Northwestern Europe"),
+                    size = c(20,20,15,15),
+                    x = c(0.01,0.01,0.14,0.50),
+                    y = c(1,0.45,0.44,0.44)
     )
   
   
-  name <- paste0("./Figures/prop_",time,".png")
+  name <- paste0("./Figures/props_",time,".png")
   
   # Save plot
   save_plot(
