changes to title page

--- a/Scripts/Manuscript.Rmd
+++ b/Scripts/Manuscript.Rmd
@@ -1,12 +1,12 @@
 ---
-title: Identifying Shifts in the Share Distribution of Transboundary Fish Stocks to Lead Time for Policy Response Under Climate Change
-subtitle: Challenges to transboundary fisheries under climate change
-author: 'Authors: Juliano Palacios-Abrantes*^1^, Thomas Frölicher^2,3^, Gabriel Reygondeau^1^, U. Rashid Sumaila^1^, Alessandro Tagliabue^4^, Colette Wabnitz^1,5^, and William W.L. Cheung^1^'
-date: 'Affiliations: ^1^Institute for the Oceans and Fisheries, University of British Columbia, Vancouver, Canada. ^2^Climate and Environmental Physics, Physics Institute, University of Bern. ^3^Oeschger Centre for Climate Change Research, University of Bern, Switzerland. ^4^School of Environmental Sciences, University of Liverpool. ^5^Center for Ocean Solutions, Stanford University, Stanford, United States'
+title: Early range shifts in transboundary fish stocks challenge their management under climate change
+# subtitle: Changes in sharing of transboundary fisheries under climate change
+author: 'Authors: Juliano Palacios-Abrantes^1*^, Thomas Frölicher^2,3^, Gabriel Reygondeau^1^, U. Rashid Sumaila^1^, Alessandro Tagliabue^4^, Colette Wabnitz^1,5^, and William W.L. Cheung^1^'
+date: 'Affiliations: ^1^Institute for the Oceans and Fisheries, University of British Columbia, Vancouver, Canada. ^2^Climate and Environmental Physics, Physics Institute, University of Bern. ^3^Oeschger Centre for Climate Change Research, University of Bern, Switzerland. ^4^School of Environmental Sciences, University of Liverpool. ^5^Stanford Center for Ocean Solutions, Stanford University, Stanford, United States'
 output:
-  # word_document:
-    # reference_docx: ../References/template.docx
-  pdf_document: default
+  # bookdown::word_document2
+    reference_docx: ../References/template.docx
+  # pdf_document: default
 bibliography: ../References/ToE_Ref.bib
 csl: ../References/science.csl
 header-includes:
